--- a/blog/source/_posts/六、主从复制原来这么简单.md
+++ b/blog/source/_posts/六、主从复制原来这么简单.md
@@ -397,3 +397,17 @@ kill -9 19688
 其实我感觉如果你通过这篇文章学会了这三点，就够了，其他的看看当了解。
 
 谢谢大家
+
+后续加油♡
+
+欢迎大家关注个人公众号 "程序员爱酸奶"
+
+分享各种学习资料，包含java，linux，大数据等。资料包含视频文档以及源码，同时分享本人及投递的优质技术博文。
+
+如果大家喜欢记得关注和分享哟❤
+![file](https://img-blog.csdnimg.cn/2019091922115335.jpeg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzI3NzkwMDEx,size_16,color_FFFFFF,t_70)
+
+
+
+
+
