--- a/blog/source/_posts/一、让我们开启单元测试之旅.md
+++ b/blog/source/_posts/一、让我们开启单元测试之旅.md
@@ -348,4 +348,18 @@ public class DataHandleTest {
 看到这啦的小伙伴，如果觉得喜欢就点个赞吧嘿嘿。如果有什么意见，欢迎给我提。嘿嘿。后续想写一下测试用例的规范，喜欢的可以持续关注❤
 
 
+欢迎大家关注个人公众号 "程序员爱酸奶"
+
+分享各种学习资料，包含java，linux，大数据等。资料包含视频文档以及源码，同时分享本人及投递的优质技术博文。
+
+如果大家喜欢记得关注和分享哟❤
+![file](https://img-blog.csdnimg.cn/2019091922115335.jpeg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzI3NzkwMDEx,size_16,color_FFFFFF,t_70)
+
+
+
+
+
+
+
+
 
